Now we have recursive Makefiles

--- a/programs/logdaemon/Makefile
+++ b/programs/logdaemon/Makefile
@@ -1,30 +1,15 @@
-GCCFLAGS = -g -Wall
-GCC = gcc $(GCCFLAGS)
-AVRGCC = avr32-linux-gcc $(GCCFLAGS)
+all:
+	$(MAKE) -C src
+	mkdir -p target
+	mv src/logdaemon target
+	cp -a src/S99logdaemon target
 
-compile: clean
-	$(GCC) -c src/*.c
-	$(GCC) -o logdaemon *.o
-
-crosscompile: clean
-	$(AVRGCC) -c src/*.c
-	$(AVRGCC) -o logdaemon *.o
-
-install: crosscompile
-	cp logdaemon /srv/ngw100/usr/bin/
-	cp S99logdaemon /srv/ngw100/etc/init.d/
-	chmod a+x  /srv/ngw100/etc/init.d/S99logdaemon
-
-uninstall:
-	rm -f /srv/ngw100/usr/bin/logdaemon
-	rm -f /srv/ngw100/etc/init.d/S99logdaemon
-
-check: clean
-	$(GCC) -c src/logdaemon.c src/util.c test/*.c
-	$(GCC) *.o -lcheck -o check
-
-tags:
-	etags *
+check:
+	$(MAKE) -C test
+	mkdir -p target
+	mv test/check target
 
 clean:
-	rm -rf *.o logdaemon check
+	rm -rf target
+	$(MAKE) clean -C src
+	$(MAKE) clean -C test
