updated pg_client.sh, added pg_config

--- a/programs/plantguard/ngw/Makefile
+++ b/programs/plantguard/ngw/Makefile
@@ -1,5 +1,7 @@
 deploy:
-	sudo cp pgclient.sh /srv/ngw100/usr/bin
+	cp pg_client.sh /srv/ngw100/usr/bin
+	cp pg_config /srv/ngw100/etc
 
 clean:
-	sudo rm -rf /srv/ngw100/usr/bin/pgclient.sh
+	rm -f /srv/ngw100/usr/bin/pg_client.sh
+	rm -f /srv/ngw100/etc/pg_config
